--- a/style.css
+++ b/style.css
@@ -179,22 +179,41 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
   background-size: cover;
   /*min-height:32px !important*/
-  min-height:32px !important;
+  min-height:50px !important;
+  
 }
-.navbar-nav > li > a, .navbar-brand {
-  padding-top:5px !important; padding-bottom:0 !important;
-  height: 32px;
+.navbar-nav > li > a, .navbar-brand{
+  padding-top:8px !important; padding-bottom:0px !important;
+  height: 50px;
 }
 .navbar-toggler {
   padding: 0 0;
   margin-top: 7px;
   margin-bottom: 0;
 }
-.navbar-brand > img{
-  padding-top:0px !important; padding-bottom:20px !important;
-  height: 60px;
-}
 
+/*.navbar-brand > img{
+  margin-top: 10px;
+  padding-top:0px !important; padding-bottom:20px !important;
+  height: 70px;
+  
+  }*/
+  .navbar-brand>img {
+    /*padding-top:5px !important; padding-bottom:0px !important;*/
+    max-height: 100%;
+    height: 500px;
+    width: auto;
+    margin: 0 auto;
+    padding-top: 2px !important;
+ 
+    /*probably not needed anymore, but doesn't hurt*/ 
+    -o-object-fit: contain;
+    object-fit: contain; 
+ 
+ }
+ 
+  
+  
 .nav-link{
   margin-left: 10px;
   margin-right: 10px;
